# TorcHood

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  main.py  requirements.txt  setup.cfg  setup.py
dataloaders/: CIFAR10.py  tiny_image_net.py
docs/: bilang_trans.md  bilang_trans_french_eng.md  yolov3.md
models/: custom_resnet.py  resnet.py  spatialtransformer.py
notebooks/: sample.ipynb
tests/: test_bilang_trf.py
torchood/: dataset.py  trainer.py
torchood/configs/: bilang_config.py  yolo_config.py
torchood/data/: cifar10_datamodule.py  cifar_datamodule.py  custom_gpt_datamodule.py  mnist_datamodule.py  opus_datamodule.py  oxfordpets_module.py  pascal_datamodule.py  pascol_datamodule.py
torchood/data/components/: cifar10.py  mnist.py  opus_books.py  opus_books_dynamic_padding.py  oxfordpets.py  pascal_voc.py  pascol_voc.py
torchood/models/: __init__.py  bilang_module.py  custom_resnet.py  lit_module.py  unet_module.py  variational_auto_encoders_module.py  visual_auto_encoders_module.py  yolo_module.py
torchood/models/components/: bilang_transformer.py  common.py  custom_gpt.py  custom_resnet.py  mini_resnet.py  resnet.py  unet.py  variational_auto_encoder.py  visual_auto_encoder.py  yolov3.py
torchood/models/components/yolo/: loss.py  utils.py
torchood/utils/: box_utils.py  gradcam.py  helper.py  misc.py  plotting.py  yolo_loss.py
utils/: datastats.py  dump_list.py  gradcam.py  lr_finder.py  plotting_functions.py
