[metadata]
name = torchood
version = 0.2.0
author = Anant Gupta
author_email = anantgupta129@gmail.com
description = A Pytorch & lightning  Wrapper, for rapid prototyping
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/anantgupta129/TorcHood
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
